rabbitmq/rabbitmq-localVolume/1-rabbitmq-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq-cluster
